feat: Divide from large numbers in order